fixed modal on mobile

--- a/app/components/dropdownModal/DropdownModal.module.scss
+++ b/app/components/dropdownModal/DropdownModal.module.scss
@@ -42,8 +42,12 @@
     box-shadow: 0px 4px 4px rgba(112, 144, 176, 0.08);
     border-radius: 1.5rem;
     @include respond(mobile) {
-      left: 0.5rem;
       transform: translateX(-50%);
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     &_title {
